[package]
name = "reqwest-response-ext"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/imp/reqwest-response-ext-rs"
description = "Extension trait for reqwest::{blocking}::Response"


[dependencies]
async-trait = "0.1"
bytes = "1.0"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"


[features]
blocking = ["reqwest/blocking"]


[package.metadata.docs.rs]
features = ["blocking"]
